# LinearAlgebra

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
Matrix/: Mat2.cpp  Mat2.hpp  Mat3.cpp  Mat4.cpp
include/Matrix/: Mat2.hpp  Mat3.hpp  Mat4.hpp
include/quaternions/: quaternions.hpp
include/vectors/: vector2.hpp  vector3.hpp  vector4.hpp
quaternions/: quaternions.cpp
vectors/: vector.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector4.cpp
